// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource tests create chart with a dataset of one cell (no title) 1`] = `
Object {
  "data": Object {
    "datasets": Array [
      Object {
        "backgroundColor": "rgb(31,119,180)",
        "borderColor": "rgb(31,119,180)",
        "data": Array [
          30,
        ],
        "label": Object {
          "toString": [Function],
        },
        "lineTension": 0,
      },
    ],
    "labels": Array [
      "P4",
    ],
  },
  "options": Object {
    "animation": Object {
      "duration": 0,
    },
    "elements": Object {
      "line": Object {
        "fill": false,
      },
      "point": Object {
        "hitRadius": 15,
      },
    },
    "hover": Object {
      "animationDuration": 10,
    },
    "layout": Object {
      "padding": Object {
        "bottom": 10,
        "left": 20,
        "right": 20,
        "top": 10,
      },
    },
    "maintainAspectRatio": false,
    "responsive": true,
    "responsiveAnimationDuration": 0,
    "scales": Object {
      "xAxes": Array [
        Object {
          "ticks": Object {
            "labelOffset": 2,
            "maxRotation": 60,
            "minRotation": 15,
            "padding": 5,
          },
        },
      ],
      "yAxes": Array [
        Object {
          "ticks": Object {
            "beginAtZero": true,
          },
        },
      ],
    },
    "title": Object {
      "display": true,
      "fontSize": 22,
      "fontStyle": "normal",
      "text": "test",
    },
  },
  "type": "line",
}
`;

exports[`datasource tests create chart with column datasets 1`] = `
Object {
  "data": Object {
    "datasets": Array [
      Object {
        "backgroundColor": "rgb(31,119,180)",
        "borderColor": "rgb(31,119,180)",
        "data": Array [
          10,
          11,
          12,
        ],
        "label": "first column dataset",
        "lineTension": 0,
      },
      Object {
        "backgroundColor": "rgb(255,127,14)",
        "borderColor": "rgb(255,127,14)",
        "data": Array [
          20,
          19,
          18,
        ],
        "label": "second column dataset",
        "lineTension": 0,
      },
    ],
    "labels": Array [
      "P1",
      "P2",
      "P3",
    ],
  },
  "options": Object {
    "animation": Object {
      "duration": 0,
    },
    "elements": Object {
      "line": Object {
        "fill": false,
      },
      "point": Object {
        "hitRadius": 15,
      },
    },
    "hover": Object {
      "animationDuration": 10,
    },
    "layout": Object {
      "padding": Object {
        "bottom": 10,
        "left": 20,
        "right": 20,
        "top": 10,
      },
    },
    "maintainAspectRatio": false,
    "responsive": true,
    "responsiveAnimationDuration": 0,
    "scales": Object {
      "xAxes": Array [
        Object {
          "ticks": Object {
            "labelOffset": 2,
            "maxRotation": 60,
            "minRotation": 15,
            "padding": 5,
          },
        },
      ],
      "yAxes": Array [
        Object {
          "ticks": Object {
            "beginAtZero": true,
          },
        },
      ],
    },
    "title": Object {
      "display": true,
      "fontSize": 22,
      "fontStyle": "normal",
      "text": "test",
    },
  },
  "type": "line",
}
`;

exports[`datasource tests create chart with column datasets without series title 1`] = `
Object {
  "data": Object {
    "datasets": Array [
      Object {
        "backgroundColor": "rgb(31,119,180)",
        "borderColor": "rgb(31,119,180)",
        "data": Array [
          10,
          11,
          12,
        ],
        "label": Object {
          "toString": [Function],
        },
        "lineTension": 0,
      },
      Object {
        "backgroundColor": "rgb(255,127,14)",
        "borderColor": "rgb(255,127,14)",
        "data": Array [
          20,
          19,
          18,
        ],
        "label": Object {
          "toString": [Function],
        },
        "lineTension": 0,
      },
    ],
    "labels": Array [
      "P1",
      "P2",
      "P3",
    ],
  },
  "options": Object {
    "animation": Object {
      "duration": 0,
    },
    "elements": Object {
      "line": Object {
        "fill": false,
      },
      "point": Object {
        "hitRadius": 15,
      },
    },
    "hover": Object {
      "animationDuration": 10,
    },
    "layout": Object {
      "padding": Object {
        "bottom": 10,
        "left": 20,
        "right": 20,
        "top": 10,
      },
    },
    "maintainAspectRatio": false,
    "responsive": true,
    "responsiveAnimationDuration": 0,
    "scales": Object {
      "xAxes": Array [
        Object {
          "ticks": Object {
            "labelOffset": 2,
            "maxRotation": 60,
            "minRotation": 15,
            "padding": 5,
          },
        },
      ],
      "yAxes": Array [
        Object {
          "ticks": Object {
            "beginAtZero": true,
          },
        },
      ],
    },
    "title": Object {
      "display": true,
      "fontSize": 22,
      "fontStyle": "normal",
      "text": "test",
    },
  },
  "type": "line",
}
`;

exports[`datasource tests create chart with only the dataset title (no data) 1`] = `
Object {
  "data": Object {
    "datasets": Array [],
    "labels": Array [
      "P4",
      "P5",
      "P6",
    ],
  },
  "options": Object {
    "animation": Object {
      "duration": 0,
    },
    "elements": Object {
      "line": Object {
        "fill": false,
      },
      "point": Object {
        "hitRadius": 15,
      },
    },
    "hover": Object {
      "animationDuration": 10,
    },
    "layout": Object {
      "padding": Object {
        "bottom": 10,
        "left": 20,
        "right": 20,
        "top": 10,
      },
    },
    "maintainAspectRatio": false,
    "responsive": true,
    "responsiveAnimationDuration": 0,
    "scales": Object {
      "xAxes": Array [
        Object {
          "ticks": Object {
            "labelOffset": 2,
            "maxRotation": 60,
            "minRotation": 15,
            "padding": 5,
          },
        },
      ],
      "yAxes": Array [
        Object {
          "ticks": Object {
            "beginAtZero": true,
          },
        },
      ],
    },
    "title": Object {
      "display": true,
      "fontSize": 22,
      "fontStyle": "normal",
      "text": "test",
    },
  },
  "type": "line",
}
`;

exports[`datasource tests create chart with rectangle dataset 1`] = `
Object {
  "data": Object {
    "datasets": Array [
      Object {
        "backgroundColor": "rgb(31,119,180)",
        "borderColor": "rgb(31,119,180)",
        "data": Array [
          10,
          11,
          12,
        ],
        "label": "first column dataset",
        "lineTension": 0,
      },
      Object {
        "backgroundColor": "rgb(255,127,14)",
        "borderColor": "rgb(255,127,14)",
        "data": Array [
          20,
          19,
          18,
        ],
        "label": "second column dataset",
        "lineTension": 0,
      },
    ],
    "labels": Array [
      "P1",
      "P2",
      "P3",
    ],
  },
  "options": Object {
    "animation": Object {
      "duration": 0,
    },
    "elements": Object {
      "line": Object {
        "fill": false,
      },
      "point": Object {
        "hitRadius": 15,
      },
    },
    "hover": Object {
      "animationDuration": 10,
    },
    "layout": Object {
      "padding": Object {
        "bottom": 10,
        "left": 20,
        "right": 20,
        "top": 10,
      },
    },
    "maintainAspectRatio": false,
    "responsive": true,
    "responsiveAnimationDuration": 0,
    "scales": Object {
      "xAxes": Array [
        Object {
          "ticks": Object {
            "labelOffset": 2,
            "maxRotation": 60,
            "minRotation": 15,
            "padding": 5,
          },
        },
      ],
      "yAxes": Array [
        Object {
          "ticks": Object {
            "beginAtZero": true,
          },
        },
      ],
    },
    "title": Object {
      "display": true,
      "fontSize": 22,
      "fontStyle": "normal",
      "text": "test",
    },
  },
  "type": "line",
}
`;

exports[`datasource tests create chart with row datasets 1`] = `
Object {
  "data": Object {
    "datasets": Array [
      Object {
        "backgroundColor": "rgb(31,119,180)",
        "borderColor": "rgb(31,119,180)",
        "data": Array [
          30,
          31,
          32,
        ],
        "label": "first row dataset",
        "lineTension": 0,
      },
      Object {
        "backgroundColor": "rgb(255,127,14)",
        "borderColor": "rgb(255,127,14)",
        "data": Array [
          40,
          41,
          42,
        ],
        "label": "second row dataset",
        "lineTension": 0,
      },
    ],
    "labels": Array [
      "P4",
      "P5",
      "P6",
    ],
  },
  "options": Object {
    "animation": Object {
      "duration": 0,
    },
    "elements": Object {
      "line": Object {
        "fill": false,
      },
      "point": Object {
        "hitRadius": 15,
      },
    },
    "hover": Object {
      "animationDuration": 10,
    },
    "layout": Object {
      "padding": Object {
        "bottom": 10,
        "left": 20,
        "right": 20,
        "top": 10,
      },
    },
    "maintainAspectRatio": false,
    "responsive": true,
    "responsiveAnimationDuration": 0,
    "scales": Object {
      "xAxes": Array [
        Object {
          "ticks": Object {
            "labelOffset": 2,
            "maxRotation": 60,
            "minRotation": 15,
            "padding": 5,
          },
        },
      ],
      "yAxes": Array [
        Object {
          "ticks": Object {
            "beginAtZero": true,
          },
        },
      ],
    },
    "title": Object {
      "display": true,
      "fontSize": 22,
      "fontStyle": "normal",
      "text": "test",
    },
  },
  "type": "line",
}
`;

exports[`datasource tests create chart with row datasets without series title 1`] = `
Object {
  "data": Object {
    "datasets": Array [
      Object {
        "backgroundColor": "rgb(31,119,180)",
        "borderColor": "rgb(31,119,180)",
        "data": Array [
          30,
          31,
          32,
        ],
        "label": Object {
          "toString": [Function],
        },
        "lineTension": 0,
      },
      Object {
        "backgroundColor": "rgb(255,127,14)",
        "borderColor": "rgb(255,127,14)",
        "data": Array [
          40,
          41,
          42,
        ],
        "label": Object {
          "toString": [Function],
        },
        "lineTension": 0,
      },
    ],
    "labels": Array [
      "P4",
      "P5",
      "P6",
    ],
  },
  "options": Object {
    "animation": Object {
      "duration": 0,
    },
    "elements": Object {
      "line": Object {
        "fill": false,
      },
      "point": Object {
        "hitRadius": 15,
      },
    },
    "hover": Object {
      "animationDuration": 10,
    },
    "layout": Object {
      "padding": Object {
        "bottom": 10,
        "left": 20,
        "right": 20,
        "top": 10,
      },
    },
    "maintainAspectRatio": false,
    "responsive": true,
    "responsiveAnimationDuration": 0,
    "scales": Object {
      "xAxes": Array [
        Object {
          "ticks": Object {
            "labelOffset": 2,
            "maxRotation": 60,
            "minRotation": 15,
            "padding": 5,
          },
        },
      ],
      "yAxes": Array [
        Object {
          "ticks": Object {
            "beginAtZero": true,
          },
        },
      ],
    },
    "title": Object {
      "display": true,
      "fontSize": 22,
      "fontStyle": "normal",
      "text": "test",
    },
  },
  "type": "line",
}
`;
